istio/istio_routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - "httpbin.org"
  gateways:
    - httpbin-gateway
  http:
    - match:
        - uri:
            prefix: /status
        - uri:
            prefix: /delay
        - uri:
            prefix: /get
        - uri:
            prefix: /anything
      route:
        - destination:
            port:
              number: 8000
            host: httpbin
